@@ -1,6 +1,9 @@
 $Id: Changelog.txt,v 1.191 2014/01/31 13:18:24 nanard Exp $
 miniUPnP client Changelog.
 
+2014/02/03:
+  minixml now handle XML comments
+
 VERSION 1.9 : released 2014/01/31
 
 2014/01/31:
